--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/DiscountPremium/DiscountPremium.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/DiscountPremium/DiscountPremium.cshtml
@@ -379,17 +379,21 @@
 			let int = '1';
 			var token = $('input[name="__RequestVerificationToken"]').val();
 
+			window.loading = () => 0;
 			$.ajax({
 				url: '@ClientRoute.GenerateUrl(this, "DiscountPremium", "GetAllEtfs")',
 				type: 'POST',
 				data: { __RequestVerificationToken: token },
-			}).done(function (data, textStatus, jqXHR) {
+				success: function (data) {
 				initFilter(data, '1');
-
-				console.log(data);
-			}).fail(function (jqXHR, textStatus, errorThrown) {
-			}).always(function () {
-				window.loading('hide');
+				},
+				complete: function () {
+					$('.c-loading').loading('hide');
+					window.loading = (methodOrOptions) => $('.c-loading').loading(methodOrOptions);  // 重新定義 loading
+				},
+				error: function (xhr, status, error) {
+					console.error(error);
+				}
 			});
 
 			$.ajax({
