--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/EFirstChoice/EFirstChoice.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/EFirstChoice/EFirstChoice.cshtml
@@ -279,7 +279,7 @@
 
             function ReturnView(selectedId, orderby, desc) {
                 var token = $('input[name="__RequestVerificationToken"]').val();
-
+                window.loading = () => 0;//蓋掉window.loading function
                 $.ajax({
                     url: '@ClientRoute.GenerateUrl(this, "eFirstChoice", "GetSortedeFirstChoice")',
                     type: 'POST',
@@ -292,6 +292,10 @@
                         $('[eh-compare]').trigger('exec');
                         $('[eh-focus]').trigger('exec');
                         $('[eh-subscription-type]').trigger('exec');
+                    },
+                    complete: function () {
+                        $('.c-loading').loading('hide');
+                        window.loading = (methodOrOptions) => $('.c-loading').loading(methodOrOptions);  // 重新定義 loading
                     },
                     error: function (xhr, status, error) {
                         console.error(error);
