--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceETFRank/PerformanceEtfRank.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceETFRank/PerformanceEtfRank.cshtml
@@ -276,6 +276,7 @@
             }
 
 			function ReturnSortView(orderby, desc) {
+				window.loading = () => 0;//蓋掉window.loading function
 				$.ajax({
 					url: '@ClientRoute.GenerateUrl(this, "PerformanceEtfRank", "GetSortedPerformanceEtfRank")',
 					type: 'POST',
@@ -288,6 +289,10 @@
 						$('[eh-compare]').trigger('exec');
 						$('[eh-focus]').trigger('exec');
 						$('[eh-subscription-type]').trigger('exec');
+					},
+					complete: function () {
+						$('.c-loading').loading('hide');
+						window.loading = (methodOrOptions) => $('.c-loading').loading(methodOrOptions);  // 重新定義 loading
 					},
 					error: function (xhr, status, error) {
 						console.error(error);
