--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/TftfuCttShr/TftfuCttShr.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/TftfuCttShr/TftfuCttShr.cshtml
@@ -492,14 +492,19 @@
 				url: '@ClientRoute.GenerateUrl(this, "TftfuCttShr", "GetAllFunds2")',
 				type: 'POST',
 				data: { __RequestVerificationToken: token },
-			}).done(function (data, textStatus, jqXHR) {
-				initFilter(data, '2');
-
-				console.log(data);
-			}).fail(function (jqXHR, textStatus, errorThrown) {
-			}).always(function () {
-				window.loading('hide');
+				success: (function (data) {
+					initFilter(data, '2');
+				},
+				complete: function() {
+					$('.c-loading').loading('hide');
+					window.loading = (methodOrOptions) => $('.c-loading').loading(methodOrOptions);  // 重新定義 loading
+				},
+				error: function (err) {
+					console.log(err);
+					$('.c-loading').loading('hide')
+				},
 			});
+
 			function initFilter(data, int) {
 				let uid = 'select#uid-sortbox' + int;
 				let result = '#result' + int;
