--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/VolumeRank/VolumeRank.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/VolumeRank/VolumeRank.cshtml
@@ -151,7 +151,7 @@
                                         </td>
                                         <td class="c-cardTable__body" data-card-table-width="1/2">
                                             <div class="c-cardTable__title" data-length="5">市價<br>(日期)</div>
-											<div class="c-cardTable__content">@item.MarketPrice<br><span class="t-date">@item.MarketPriceDateFormat</span></div>
+                                            <div class="c-cardTable__content">@item.MarketPrice<br><span class="t-date">@item.MarketPriceDateFormat</span></div>
                                         </td>
                                         <td class="c-cardTable__body" data-card-table-width="1/2">
                                             <div class="c-cardTable__title" data-length="5">折溢價</div>
@@ -225,6 +225,7 @@
             }
 
             function ReturnSortView(orderby, desc) {
+                window.loading = () => 0;//蓋掉window.loading function
                 $.ajax({
                     url: '@ClientRoute.GenerateUrl(this, "VolumeRank", "GetSortedVolumeRank")',
                     type: 'POST',
@@ -237,6 +238,10 @@
                         $('[eh-compare]').trigger('exec');
                         $('[eh-focus]').trigger('exec');
                         $('[eh-subscription-type]').trigger('exec');
+                    },
+                    complete: function () {
+                        $('.c-loading').loading('hide');
+                        window.loading = (methodOrOptions) => $('.c-loading').loading(methodOrOptions);  // 重新定義 loading
                     },
                     error: function (xhr, status, error) {
                         console.error(error);
