--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/Bond.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/Bond.cshtml
@@ -204,59 +204,61 @@
                                         <div class="c-filter__group">
                                             <div class="c-filter__items">
                                                 <div class="l-flex u-flex-col u-flex-gap-lg u-flex-gap-max@mb-only">
-
                                                     @* 債券分類 *@
-                                                    <div class="l-flex__item">
-                                                        <div class="c-filterForm" id="uid-criteria-bondclass" data-filter-group>
-                                                            <div class="c-filterForm__title" data-filter-title>
-                                                                <span>債券分類</span>
-                                                            </div>
-                                                            <div class="c-filterForm__value">
-                                                                <div class="l-pickGroup">
-                                                                    <div class="l-pickGroup__all">
-                                                                        <label class="o-btnCheckBox">
-                                                                            <input class="o-btnCheckBox__input" type="checkbox" checked data-filter-checkall value="all">
-                                                                            <div class="o-btnCheckBox__text">全部</div>
-                                                                        </label>
-                                                                    </div>
-                                                                    <div class="l-pickGroup__wrap">
-                                                                        <div class="l-pickCollapse" data-overflow-hide="bondclass">
-                                                                            <div class="l-pickCollapse__content" data-overflow-content="bondclass">
-                                                                                <div class="l-pickGroup">
-                                                                                    @foreach (var bondclass in Model.BondClassList)
-                                                                                    {
-                                                                                        string value = bondclass;
-                                                                                        string display = string.Empty;
-
-                                                                                        if (bondclass == null)
+                                                    @if (Model.BondClassList != null && Model.BondClassList.Count() > 0)
+                                                    {                                                        
+                                                        <div class="l-flex__item">
+                                                            <div class="c-filterForm" id="uid-criteria-bondclass" data-filter-group>
+                                                                <div class="c-filterForm__title" data-filter-title>
+                                                                    <span>債券分類</span>
+                                                                </div>
+                                                                <div class="c-filterForm__value">
+                                                                    <div class="l-pickGroup">
+                                                                        <div class="l-pickGroup__all">
+                                                                            <label class="o-btnCheckBox">
+                                                                                <input class="o-btnCheckBox__input" type="checkbox" checked data-filter-checkall value="all">
+                                                                                <div class="o-btnCheckBox__text">全部</div>
+                                                                            </label>
+                                                                        </div>
+                                                                        <div class="l-pickGroup__wrap">
+                                                                            <div class="l-pickCollapse" data-overflow-hide="bondclass">
+                                                                                <div class="l-pickCollapse__content" data-overflow-content="bondclass">
+                                                                                    <div class="l-pickGroup">
+                                                                                        @foreach (var bondclass in Model.BondClassList)
                                                                                         {
-                                                                                            display = "display: none;";
-                                                                                            value = string.Empty;
-                                                                                        }
+                                                                                            string value = bondclass;
+                                                                                            string display = string.Empty;
 
-                                                                                        <div class="l-pickGroup__item" style="@display">
-                                                                                            <label class="o-btnCheckBox" data-filter-checkbox>
-                                                                                                <input class="o-btnCheckBox__input" type="checkbox" value="@value">
-                                                                                                <div class="o-btnCheckBox__text" data-filter-value="@value"></div>
-                                                                                            </label>
-                                                                                        </div>
-                                                                                    }
+                                                                                            if (bondclass == null)
+                                                                                            {
+                                                                                                display = "display: none;";
+                                                                                                value = string.Empty;
+                                                                                            }
+
+                                                                                            <div class="l-pickGroup__item" style="@display">
+                                                                                                <label class="o-btnCheckBox" data-filter-checkbox>
+                                                                                                    <input class="o-btnCheckBox__input" type="checkbox" value="@value">
+                                                                                                    <div class="o-btnCheckBox__text" data-filter-value="@value"></div>
+                                                                                                </label>
+                                                                                            </div>
+                                                                                        }
+                                                                                    </div>
                                                                                 </div>
-                                                                            </div>
-                                                                            <div class="l-pickCollapse__expand">
-                                                                                <div class="l-pickCollapse__btn l-pickCollapse__btn--pc">
-                                                                                    <a href="#" class="o-prefixLink o-prefixLink--down o-prefixLink--sm" data-overflow-action="frequency">展開</a>
+                                                                                <div class="l-pickCollapse__expand">
+                                                                                    <div class="l-pickCollapse__btn l-pickCollapse__btn--pc">
+                                                                                        <a href="#" class="o-prefixLink o-prefixLink--down o-prefixLink--sm" data-overflow-action="frequency">展開</a>
+                                                                                    </div>
+                                                                                    <div class="l-pickCollapse__btn l-pickCollapse__btn--mb">
+                                                                                        <a href="#" class="o-collapseBtn o-collapseBtn--down" data-overflow-action="bondclass"></a>
+                                                                                    </div>
                                                                                 </div>
-                                                                                <div class="l-pickCollapse__btn l-pickCollapse__btn--mb">
-                                                                                    <a href="#" class="o-collapseBtn o-collapseBtn--down" data-overflow-action="bondclass"></a>
-                                                                                </div>
-                                                                            </div>
-                                                                            <div class="l-pickCollapse__collapse">
-                                                                                <div class="l-pickCollapse__btn l-pickCollapse__btn--pc">
-                                                                                    <a href="#" class="o-prefixLink o-prefixLink--up o-prefixLink--sm" data-overflow-action="frequency">收合</a>
-                                                                                </div>
-                                                                                <div class="l-pickCollapse__btn l-pickCollapse__btn--mb">
-                                                                                    <a href="#" class="o-collapseBtn o-collapseBtn--up" data-overflow-action="bondclass"></a>
+                                                                                <div class="l-pickCollapse__collapse">
+                                                                                    <div class="l-pickCollapse__btn l-pickCollapse__btn--pc">
+                                                                                        <a href="#" class="o-prefixLink o-prefixLink--up o-prefixLink--sm" data-overflow-action="frequency">收合</a>
+                                                                                    </div>
+                                                                                    <div class="l-pickCollapse__btn l-pickCollapse__btn--mb">
+                                                                                        <a href="#" class="o-collapseBtn o-collapseBtn--up" data-overflow-action="bondclass"></a>
+                                                                                    </div>
                                                                                 </div>
                                                                             </div>
                                                                         </div>
@@ -264,7 +266,7 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                    </div>
+                                                    }                                                    
 
                                                     @* 配息頻率 *@
                                                     <div class="l-flex__item">
