Update : 結構型商品搜尋頁調整 autocomplete 後排序名稱

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductSearch.cshtml
@@ -433,7 +433,9 @@
                             return new RegExp(query, 'gi').test(item.value);
                         });
                     }
-                    done({ suggestions: result.slice(0, 5) });
+                    done({
+                        suggestions: result.slice(0, 5).sort((a, b) => (a.value > b.value ? 1 : -1))
+                    });
                 },
                 onSearchComplete: function (query, suggestions) {
                     var autocomplete = $(this).autocomplete();
